<resources>
    <string name="app_name">Bosanski PayPal</string>
    <string name="Global">Budget:</string>
    <string name="limit">Global limit:</string>
    <string name="UnknownValue">xxxx</string>
    <string name="filterBy">Filter by:</string>
    <string name="filter_by">Filter by:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="transaction_interval">Transaction Interval</string>
    <string name="item_description">Item Description</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date(tap to change):</string>
    <string name="textview">NOT INPUTED</string>
    <string name="end_date">End Date(tap to change):</string>
    <string name="sort_by">Sort by:</string>
    <string name="add">ADD</string>
    <string name="monthly_limit">Monthly limit:</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="api_id">b2fd13f4-2535-4bf8-a9e8-c74e49e6d4de</string>
    <string name="root">http://rma20-app-rmaws.apps.us-west-1.starter.openshift-online.com</string>
    <string name="offline">OFFLINE</string>
</resources>

