<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/expensesChart"
        android:layout_width="382dp"
        android:layout_height="168dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/incomeChart"
        android:layout_width="382dp"
        android:layout_height="168dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="204dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/budgetChart"
        android:layout_width="382dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="270dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioDay"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/day"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioWeek"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/week"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioMonth"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/month"
            android:textSize="12sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>